Added more properties

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,6 +1,11 @@
+html {
+    height: 100%;
+}
+
 body {
     background-color: whitesmoke;
     padding: 50px;
+    min-height: 100%;
 }
 
 .form-container {
